# imdb-to-sqlite

./: README.md  pyproject.toml
imdb_to_sqlite/: cli.py
tests/: test_imdb_to_sqlite.py
